# neon-video-compressor

./: privacy.html  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.txt
app/src/main/cpp/: CMakeLists.txt  native_converter.c
app/src/main/java/com/shaforostoff/neonvideocompressor/: App.java  MainActivity.java  OutputActions.java  PreviewActivity.java  ProgressActivity.java
app/src/main/java/com/shaforostoff/neonvideocompressor/engine/: AudioEncoder.java  ConversionJob.java  JobControl.java  MediaStoreOutput.java  NativeConverter.java  Options.java  SourceMetadata.java
app/src/main/java/com/shaforostoff/neonvideocompressor/service/: ConversionService.java  ResultStore.java
app/src/main/res/drawable/: ic_stat_convert.xml
app/src/main/res/layout/: activity_main.xml  activity_preview.xml  activity_progress.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-all.sh  build-ffmpeg.sh  build-x265.sh
scripts/patches/: x265-4.2-pkgconfig-libs-private.patch
